zeit.content.modules changes
============================


1.3.2 (unreleased)
------------------

- ZON-2932: Display helptext field of referenced embed object


1.3.1 (2019-02-05)
------------------

- ZON-5113: Bypass zope.security for embed parameters


1.3.0 (2019-02-04)
------------------

- ZON-5113: Implement storing embed parameters in the XML of the module


1.2.0 (2019-01-28)
------------------

- ZON-5112: Allow referencing Embed objects from the rawtext module, not just Text


1.1.1 (2018-08-24)
------------------

- ZON-4843: Add mail_required to Mail module


1.1.0 (2017-10-20)
------------------

- ZON-4227: Implement mail module


1.0.0 (2017-10-19)
------------------

- Initial release, extracted from zeit.content.article and zeit.content.cp