@@ -7,6 +7,8 @@ zeit.content.modules changes
 
 - ZON-2932: Display helptext field of referenced embed object
 
+- ZON-2932: Inject CSS rules into module form (prefixed with module ID)
+
 
 1.3.1 (2019-02-05)
 ------------------
